--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "can-use-dom": "^0.1.0",
     "chart.js": "^2.1.6",
     "codemirror": "^5.19.0",
+    "echarts": "^3.5.2",
     "echarts-for-react": "^1.1.3",
     "enquire.js": "^2.1.1",
     "fibers": "^1.0.13",
@@ -32,6 +33,7 @@
     "react-dom": "15.1.0",
     "react-grid-layout": "^0.12.7",
     "react-mounter": "^1.2.0",
+    "react-resizable": "^1.6.0",
     "react-slick": "^0.14.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-treeview": "^0.4.5",
