--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-resizable": "^1.6.0",
     "react-slick": "^0.14.5",
     "react-tap-event-plugin": "^1.0.0",
-    "react-treeview": "^0.4.5",
+    "react-treeview": "0.4.5",
     "slick-carousel": "^1.6.0"
   },
   "devDependencies": {
