Remove unncecesary "\" from databazel dockerfile

--- a/config/docker/databazel/Dockerfile
+++ b/config/docker/databazel/Dockerfile
@@ -22,7 +22,7 @@ ARG meteor_settings
 ENV MONGO_URL=mongodb://0.0.0.0:27017/databazel \
     ROOT_URL=http://127.0.0.1 \
     PORT=3000 \
-    METEOR_SETTINGS=$meteor_settings \
+    METEOR_SETTINGS=$meteor_settings
 # you may add kadira credentials for app debugging here
 #    KADIRA_APP_ID= \
 #    KADIRA_APP_SECRET=
